[package]
name = "ffcnt"
version = "0.1.3"
authors = ["The8472"]
description = "Fast file counting on HDDs"
repository = "https://github.com/the8472/ffcnt"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
license = "GPL-3.0"

include = [
    "**/*.rs",
    "README.md",
    "LICENCE",
    "Cargo.toml",
]

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
debug = false


[dependencies]
btrfs = "1.2.1"
clap = "2.20"
derive-error = "0.0.3"
