[package]
name = "ffcnt"
version = "0.2.2"
authors = ["The8472"]
description = "Fast file counting on HDDs"
keywords = ["linux", "cli"]
repository = "https://github.com/the8472/ffcnt"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
license = "GPL-3.0"

include = [
    "**/*.rs",
    "README.md",
    "LICENCE",
    "Cargo.toml",
    "Cargo.lock"
]

[[bin]]
path = "src/main.rs"
name = "ffcnt"


[profile.release]
lto = true
opt-level = "s"
panic = "abort"
debug = false

[dependencies]
clap = "2.20"
derive-error = "0.0.3"
isatty = "0.1.3"
platter-walk = "0.1.2"

[features]
system_alloc = []
